<?xml version="1.0"?>
<package format="3">
  <name>time_scheuler</name>
  <version>0.0.1</version>
  <description>Time scheduler node that publishes 5ms and 10ms cycles.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>